--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -16,6 +16,7 @@ stackable-operator.workspace = true
 clap_complete.workspace = true
 clap.workspace = true
 comfy-table.workspace = true
+const_format.workspace = true
 directories.workspace = true
 dotenvy.workspace = true
 indexmap.workspace = true
