--- a/rust/stackable-cockpit/Cargo.toml
+++ b/rust/stackable-cockpit/Cargo.toml
@@ -34,6 +34,7 @@ tracing.workspace = true
 url.workspace = true
 utoipa = { workspace = true, optional = true }
 which.workspace = true
+futures.workspace = true
 
 [dev-dependencies]
 rstest.workspace = true
