--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+web/src/api/schema.d.ts linguist-generated
 extra/completions/* linguist-generated
 extra/man/* linguist-generated
+Cargo.nix linguist-generated
