--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 sha2 = "0.10"
-snafu = "0.7"
+snafu = { version = "0.7", features = ["futures"] }
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.61.0" }
 tera = "1.18"
 tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
