--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ indexmap = { version = "2.0", features = ["serde"] }
 k8s-openapi = { version = "0.20", default-features = false, features = ["v1_28"] }
 kube = { version = "0.87", default-features = false, features = ["client", "rustls-tls", "ws"] }
 lazy_static = "1.4"
+libc = "0.2.153"
 once_cell = "1.18"
 phf = "0.11"
 phf_codegen = "0.11"
@@ -45,7 +46,8 @@ sha2 = "0.10"
 snafu = { version = "0.7", features = ["futures"] }
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.61.0" }
 tera = "1.18"
-tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
+termion = "3.0.0"
+tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros", "fs", "process", "io-std"] }
 tower-http = "0.4"
 tracing = "0.1"
 tracing-subscriber = "0.3"
