--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -29,9 +29,8 @@ serde.workspace = true
 snafu.workspace = true
 tera.workspace = true
 tokio.workspace = true
-tokio.features = ["io-std"]
 tracing-subscriber.workspace = true
 tracing.workspace = true
 futures.workspace = true
-termion = "3.0.0"
-libc = "0.2.153"
+termion.workspace = true
+libc.workspace = true
