--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 web/src/api/schema.d.ts linguist-generated
 extra/completions/* linguist-generated
 extra/man/* linguist-generated
+nix/** linguist-generated
 Cargo.nix linguist-generated
+crate-hashes.json linguist-generated
