feat: Add experimental debug container command (#204)
* Basic ability to create and attach a debug container

* Add support for copying env from a target container, as well as running a custom command

* Send TTY window size

* Read asynchronously from stdin

* Default to the default namespace

* Fix stdin not being re-registered correctly with the waker

* Add debug error messages

* Let AsyncStdin reset its state once shut down

* Docs, demarcate as experimental

* Move debug container name to span

* Changelog

* ci: use install-nix-action

* fix(nix): add shebang to script (stackabletech/operator-templating#325)

* Move dependencies into root Cargo.toml

* Uglify formatting

* Change the container prefix from sble-debug- to stackablectl-debug-

* Default to the target container's image

* Run debug container as root

---------

Co-authored-by: Nick Larsen <nick.larsen@stackable.tech>

--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -31,3 +31,6 @@ tera.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
+futures.workspace = true
+termion.workspace = true
+libc.workspace = true
