--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,8 +33,10 @@ k8s-openapi = { version = "0.20", default-features = false, features = [
 kube = { version = "0.87", default-features = false, features = [
   "client",
   "rustls-tls",
+  "ws",
 ] }
 lazy_static = "1.4"
+libc = "0.2.153"
 once_cell = "1.18"
 phf = "0.11"
 phf_codegen = "0.11"
@@ -49,14 +51,16 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 sha2 = "0.10"
-snafu = "0.7"
+snafu = { version = "0.7", features = ["futures"] }
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.64.0" }
 tera = "1.18"
+termion = "3.0.0"
 tokio = { version = "1.29.0", features = [
   "rt-multi-thread",
   "macros",
   "fs",
   "process",
+  "io-std",
 ] }
 tower-http = "0.4"
 tracing = "0.1"
