Add to release job

--- a/.github/workflows/release_stackablectl.yml
+++ b/.github/workflows/release_stackablectl.yml
@@ -26,6 +26,9 @@ jobs:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-20.04 # We don't use ubuntu-latest because we want to build against an old glibc version. (18.04 has glibc 2.27, 20.04 has glibc 2.31, 22.04 has glibc 2.35)
             file-suffix: ""
+          - target: aarch64-unknown-linux-gnu
+            os: buildjet-4vcpu-ubuntu-2204-arm # The ARM runners only support Ubuntu 22.04, so we can't pick 20.04
+            file-suffix: ""
           - target: x86_64-apple-darwin
             os: macos-latest
             file-suffix: ""
@@ -42,6 +45,10 @@ jobs:
         with:
           toolchain: ${{ env.RUST_VERSION }}
           targets: ${{ matrix.target }}
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '^1.22.2'
 
       - name: Build Binary
         if: matrix.os != 'windows-latest'
