--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 web/src/api/schema.d.ts linguist-generated
 extra/completions/* linguist-generated
-extra/man/* linguist-generated
-nix/** linguist-generated
-Cargo.nix linguist-generated
 crate-hashes.json linguist-generated
+extra/man/* linguist-generated
+Cargo.nix linguist-generated
+yarn.lock linguist-generated
+nix/** linguist-generated
+go.sum linguist-generated
