--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
         # Generated file
         exclude: ^web/src/api/schema.d.ts|extra/.*$
       - id: end-of-file-fixer
+        exclude: Cargo.nix
       - id: detect-aws-credentials
         args: ["--allow-missing-credentials"]
       - id: detect-private-key
