--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     hooks:
       - id: trailing-whitespace
         # Generated file
-        exclude: ^web/src/api/schema.d.ts|extra/.*$
+        exclude: ^web/src/api/schema\.d\.ts|extra/.*$
       - id: end-of-file-fixer
         exclude: Cargo.nix
       - id: detect-aws-credentials
