--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 ---
 # See https://pre-commit.com for more information
+fail_fast: true
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -7,8 +8,9 @@ repos:
     hooks:
       - id: trailing-whitespace
         # Generated file
-        exclude: ^web/src/api/schema.d.ts|extra/.*$
+        exclude: ^web/src/api/schema\.d\.ts|extra/.*$
       - id: end-of-file-fixer
+        exclude: Cargo.nix
       - id: detect-aws-credentials
         args: ["--allow-missing-credentials"]
       - id: detect-private-key
@@ -49,31 +51,43 @@ repos:
     hooks:
       - id: gen-man
         name: gen-man
+        files: ^rust/stackablectl/
         language: system
         entry: cargo xtask gen-man
         stages: [commit, merge-commit, manual]
         pass_filenames: false
       - id: gen-comp
         name: gen-comp
+        files: ^rust/stackablectl/
         language: system
         entry: cargo xtask gen-comp
         stages: [commit, merge-commit, manual]
         pass_filenames: false
       - id: gen-openapi
         name: gen-openapi
+        files: ^web/
         language: system
         entry: cargo xtask gen-openapi
         stages: [commit, merge-commit, manual]
         pass_filenames: false
       - id: gen-ctl-readme
         name: gen-ctl-readme
+        files: ^rust/stackablectl/
         language: system
         entry: cargo xtask gen-ctl-readme
         stages: [commit, merge-commit, manual]
         pass_filenames: false
       - id: gen-docs
         name: gen-docs
+        files: ^rust/stackablectl/
         language: system
         entry: cargo xtask gen-docs
         stages: [commit, merge-commit, manual]
         pass_filenames: false
+      - id: gen-cargo-nix
+        name: gen-cargo-nix
+        files: ^Cargo\.lock|go\.mod$
+        language: system
+        entry: make regenerate-nix
+        stages: [commit, merge-commit, manual]
+        pass_filename: false
