chore: Release stackablectl-24.3.6

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -90,4 +90,4 @@ repos:
         language: system
         entry: make regenerate-nix
         stages: [commit, merge-commit, manual]
-        pass_filename: false
+        pass_filenames: false
