--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,55 +21,41 @@ axum-extra = { version = "0.9", features = ["typed-header"] }
 bcrypt = "0.15"
 bindgen = "0.69.4"
 cc = "1.0.83"
-clap = { version = "4.2.1", features = ["derive", "env"] }
-clap_complete = "4.2"
-comfy-table = { version = "7.0", features = ["custom_styling"] }
+clap = { version = "4.5", features = ["derive", "env"] }
+clap_complete = "4.5"
+comfy-table = { version = "7.1", features = ["custom_styling"] }
 directories = "5.0"
 dotenvy = "0.15"
 futures = "0.3"
-indexmap = { version = "2.0", features = ["serde"] }
-k8s-openapi = { version = "0.22", default-features = false, features = [
-  "v1_30",
-] }
-kube = { version = "0.91", default-features = false, features = [
-  "client",
-  "rustls-tls",
-  "ws",
-] }
-lazy_static = "1.4"
-libc = "0.2.153"
-once_cell = "1.18"
+indexmap = { version = "2.2", features = ["serde"] }
+k8s-openapi = { version = "0.22", default-features = false, features = ["v1_30"] }
+kube = { version = "0.92", default-features = false, features = ["client", "rustls-tls", "ws"] }
+lazy_static = "1.5"
+libc = "0.2"
+once_cell = "1.19"
 phf = "0.11"
 phf_codegen = "0.11"
 rand = "0.8"
-regex = "1.9"
-reqwest = { version = "0.12", default-features = false, features = [
-  "rustls-tls",
-] }
-rstest = "0.19"
+regex = "1.10"
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
+rstest = "0.21"
 semver = { version = "1.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 sha2 = "0.10"
 snafu = { version = "0.8", features = ["futures"] }
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.67.1" }
-tera = "1.18"
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.70.0" }
+tera = "1.20"
 termion = "4.0"
-tokio = { version = "1.29.0", features = [
-  "rt-multi-thread",
-  "macros",
-  "fs",
-  "process",
-  "io-std",
-] }
+tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "process", "io-std"] }
 tower-http = { version = "0.5", features = ["validate-request"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-url = "2.3"
+url = "2.5"
 utoipa = { version = "4.2", features = ["indexmap"] }
-utoipa-swagger-ui = { version = "7.0", features = ["axum"] }
-uuid = { version = "1.4.0", features = ["v4"] }
+utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
+uuid = { version = "1.10", features = ["v4"] }
 which = "6.0"
 
 # [patch."https://github.com/stackabletech/operator-rs.git"]
