chore: Just use $HOME var

--- a/.github/workflows/pr_pre-commit.yml
+++ b/.github/workflows/pr_pre-commit.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           set -xeuo pipefail
 
-          LOCATION="$HOME/.local/bin/hadolint"
+          LOCATION="$HOME/hadolint"
           SYSTEM=$(uname -s)
           ARCH=$(uname -m)
 
