--- a/.github/workflows/pr_cockpit.yml
+++ b/.github/workflows/pr_cockpit.yml
@@ -30,16 +30,11 @@ jobs:
     name: General Pull Request Checks
     uses: ./.github/workflows/pr_general.yml
 
-  reviewdog-checks:
-    name: Reviewdog Pull Request Checks
-    uses: ./.github/workflows/pr_reviewdog.yml
-
   check-charts:
     name: Helm Chart Check
     runs-on: ubuntu-latest
     needs:
       - general-checks
-      - reviewdog-checks
     steps:
       - name: Checkout Repository
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
@@ -98,6 +93,12 @@ jobs:
       - uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
         with:
           go-version: ${{ env.GO_VERSION }}
+
+      - name: Install cosign
+        uses: sigstore/cosign-installer@4959ce089c160fddf62f7b42464195ba1a56d382 # v3.6.0
+
+      - name: Install syft
+        uses: anchore/sbom-action/download-syft@61119d458adab75f756bc0b9e4bde25725f86a7a # v0.17.2
 
       - name: Setup Rust Cache
         uses: Swatinem/rust-cache@23bce251a8cd2ffc3c1075eaa2367cf899916d84 # v2.7.3
