--- a/.github/workflows/pr_cockpit.yml
+++ b/.github/workflows/pr_cockpit.yml
@@ -71,6 +71,8 @@ jobs:
 
   publish:
     name: Publish Docker Image
+    permissions:
+      id-token: write
     runs-on: ubuntu-latest
     env:
       NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
