--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ dotenvy = "0.15"
 futures = "0.3"
 indexmap = { version = "2.2", features = ["serde"] }
 k8s-openapi = { version = "0.22", default-features = false, features = ["v1_30"] }
-kube = { version = "0.93", default-features = false, features = ["client", "rustls-tls", "ws"] }
+kube = { version = "0.93", default-features = false, features = ["client", "rustls-tls", "ws", "socks5", "http-proxy"] }
 lazy_static = "1.5"
 libc = "0.2"
 once_cell = "1.19"
