--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,11 +31,13 @@ indexmap = { version = "2.2", features = ["serde"] }
 k8s-openapi = { version = "0.22", default-features = false, features = ["v1_30"] }
 kube = { version = "0.93", default-features = false, features = ["client", "rustls-tls", "ws"] }
 lazy_static = "1.5"
+log = "0.4"
 libc = "0.2"
 once_cell = "1.19"
 phf = "0.11"
 phf_codegen = "0.11"
 rand = "0.8"
+ratatui = "0.29"
 regex = "1.10"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
 rstest = "0.22"
@@ -52,6 +54,7 @@ tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "proc
 tower-http = { version = "0.5", features = ["validate-request"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+tui-logger = { version = "0.13", features = ["tracing-support"] }
 url = "2.5"
 utoipa = { version = "4.2", features = ["indexmap"] }
 utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
@@ -60,6 +63,10 @@ which = "6.0"
 
 # [patch."https://github.com/stackabletech/operator-rs.git"]
 # stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
+
+[patch.crates-io]
+# Needed for ratatui 0.29 support
+tui-logger = {git = "https://github.com/gin66/tui-logger", rev ="f2bb9848667ba4ac36b2571e05e2a3fd0413de0d" }
 
 [profile.release.package.stackablectl]
 # opt-level = "z" # We don't use that as the binary saving is not *that* big (think of 1MB) and it's not worth it risiking performance for this
