--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -20,7 +20,9 @@ directories.workspace = true
 dotenvy.workspace = true
 indexmap.workspace = true
 lazy_static.workspace = true
+log.workspace = true
 rand.workspace = true
+ratatui.workspace = true
 reqwest.workspace = true
 semver.workspace = true
 serde_json.workspace = true
@@ -31,6 +33,7 @@ tera.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
+tui-logger.workspace = true
 futures.workspace = true
 termion.workspace = true
 libc.workspace = true
