--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ serde_json = "1.0"
 serde_yaml = "0.9"
 sha2 = "0.10"
 snafu = { version = "0.8", features = ["futures"] }
+strum = "0.26"
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.74.0" }
 tera = "1.20"
 termion = "4.0"
