Revert "chore: Test action validation (requires revert)"
This reverts commit 8fbe7a96ca15e0f82e3efbbbb66a1e63d1931eb9.

--- a/.github/workflows/pr_pre-commit.yml
+++ b/.github/workflows/pr_pre-commit.yml
@@ -27,4 +27,4 @@ jobs:
           rust: ${{ env.RUST_TOOLCHAIN_VERSION }}
           hadolint: ${{ env.HADOLINT_VERSION }}
           nix: ${{ env.NIX_VERSION }}
-          # nix-github-token: ${{ secrets.GITHUB_TOKEN }} Commented out for testing
+          nix-github-token: ${{ secrets.GITHUB_TOKEN }}
