chore: Apply 2024 formatting

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,8 +20,6 @@ repos:
   - repo: https://github.com/doublify/pre-commit-rust
     rev: eeee35a89e69d5772bdee97db1a6a898467b686e # 1.0
     hooks:
-      - id: fmt
-        args: ["--all", "--", "--check"]
       - id: clippy
         args: ["--all-targets", "--all-features", "--", "-D", "warnings"]
 
@@ -100,4 +98,12 @@ repos:
         language: system
         entry: make regenerate-nix
         stages: [pre-commit, pre-merge-commit, manual]
+        pass_filenames: false
+
+      - id: cargo-rustfmt
+        name: cargo-rustfmt
+        language: system
+        # Pinning to a specific rustc version, so that we get consistent formatting
+        entry: cargo +nightly-2025-01-15 fmt --all -- --check
+        stages: [pre-commit]
         pass_filenames: false
