--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "rust-analyzer.showUnlinkedFileNotification": false
+  "rust-analyzer.showUnlinkedFileNotification": false,
+  "rust-analyzer.cargo.features": "all",
+  "rust-analyzer.rustfmt.overrideCommand": [
+    "rustfmt",
+    "+nightly-2025-01-15",
+    "--edition",
+    "2024",
+    "--"
+  ],
 }
