--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -32,7 +32,9 @@ tera.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
+tracing-indicatif.workspace = true
 futures.workspace = true
+indicatif.workspace = true
 termion.workspace = true
 urlencoding.workspace = true
 libc.workspace = true
