feat: Support configuring listner-operator preset (with sensible defaults)

--- a/rust/stackable-cockpit/Cargo.toml
+++ b/rust/stackable-cockpit/Cargo.toml
@@ -16,6 +16,7 @@ openapi = ["dep:utoipa"]
 helm-sys = { path = "../helm-sys" }
 
 bcrypt.workspace = true
+clap.workspace = true
 indexmap.workspace = true
 k8s-openapi.workspace = true
 kube.workspace = true
